# machines

./: .gitlab-ci.yml  Justfile  LICENSE  README.md  test_acts_build.sh
.github/: pull_request_template.md
.github/workflows/: build-images.yml  reusable-build-images.yml
alma10-base/: Dockerfile
alma9-base/: Dockerfile
alma9_cuda_oneapi/: Dockerfile  setenv.sh
alma9_rocm_oneapi/: Dockerfile  rocm.repo  setenv.sh
archive/alma9_cuda_oneapi/: Dockerfile  cuda.repo
archive/alma9_rocm_oneapi/: Dockerfile  setenv.sh
archive/centos7-base/: Dockerfile
archive/centos7-lcg100-gcc10/: Dockerfile  lcg.repo
archive/centos7-lcg101-gcc11/: Dockerfile
archive/centos7-lcg96/: Dockerfile
archive/centos7-lcg97apython3-gcc9/: lcg.repo
archive/centos7-lcg98python3-gcc10/: lcg.repo
archive/ubuntu1910/: CMakeLists.txt  Dockerfile
cc7/: Dockerfile
cc7_lcg95/: Dockerfile  create_lcg_view.py
cc7_lcg96/: Dockerfile
cc7_lcg_base/: Dockerfile
centos7/: Dockerfile
centos7-clang-tidy/: Dockerfile
centos7-lcg100-gcc10/: Dockerfile
centos7-lcg101-gcc11/: Dockerfile  lcg.repo
centos7-lcg95apython3/: Dockerfile  fixed-gcc-setup.sh
centos7-lcg96/: Dockerfile
centos7-lcg96-cuda-sycl/: Dockerfile
centos7-lcg97apython3/: Dockerfile  lcg.repo
centos7-lcg97apython3-gcc9/: Dockerfile
centos7-lcg98python3/: Dockerfile
centos7-lcg98python3-gcc10/: Dockerfile  lcg.repo
centos8-lcg100-gcc10/: Dockerfile
centos8-lcg101-gcc11/: Dockerfile  lcg.repo
centos9-lcg102b-gcc11/: Dockerfile  lcg.repo
check/: Dockerfile  Dockerfile.llvm8
check_llvm8/: Dockerfile
el9-base/: Dockerfile
format10/: Dockerfile
format14/: Dockerfile
format8/: Dockerfile
llvm/: Dockerfile
slc6/: Dockerfile
slc6_lcg95/: Dockerfile
slc6_lcg_base/: Dockerfile
ubuntu/: Dockerfile
ubuntu1804_cuda/: Dockerfile
ubuntu1804_cuda_oneapi/: Dockerfile  llvm-2022-06-python3.6.patch
ubuntu1804_rocm/: Dockerfile  rocm.gpg.key
ubuntu1804_rocm_oneapi/: Dockerfile
ubuntu2004/: Dockerfile  dd4hep_1_11_2_tbb_fix.patch
ubuntu2004_cuda/: Dockerfile
ubuntu2004_cuda_futhark/: Dockerfile
ubuntu2004_cuda_oneapi/: Dockerfile
ubuntu2004_exatrkx/: Dockerfile
ubuntu2004_exatrkx_training/: Dockerfile
ubuntu2004_llvm10/: Dockerfile
ubuntu2004_oneapi/: Dockerfile
ubuntu2004_rocm/: Dockerfile
ubuntu2004_rocm_oneapi/: Dockerfile
ubuntu2204/: Dockerfile
ubuntu2204_clang/: Dockerfile  download_geant4_data.sh  podio_cpp20.patch
ubuntu2204_cpp20/: Dockerfile
ubuntu2204_cuda/: Dockerfile
ubuntu2204_cuda_oneapi/: Dockerfile
ubuntu2204_exatrkx/: Dockerfile
ubuntu2204_extend_test/: Dockerfile
ubuntu2204_rocm_clang/: Dockerfile
ubuntu2204_rocm_clang_cxx20/: Dockerfile
ubuntu2404/: 0001-CMake-allow-finding-newer-versions-of-podio.patch  Dockerfile
ubuntu2404_clang19/: Dockerfile
ubuntu2404_clang21/: Dockerfile
ubuntu2404_clang22/: Dockerfile
ubuntu2404_cuda/: Dockerfile
ubuntu2404_cuda_oneapi/: Dockerfile
ubuntu2404_docs/: Dockerfile
ubuntu2404_exatrkx/: Dockerfile
ubuntu2404_gnn/: Dockerfile
ubuntu2404_oneapi/: Dockerfile  oneapi.list
ubuntu2404_rocm/: Dockerfile  rocm.list
ubuntu2404_rocm_oneapi/: Dockerfile  rocm.list
ubuntu2404_tensorrt/: Dockerfile
ubuntu2604/: Dockerfile
ubuntu_llvm/: Dockerfile
ubuntu_llvm9/: Dockerfile
(+22 files in other folders)
